--- a/SSFMP/.settings/org.eclipse.core.resources.prefs
+++ b/SSFMP/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,5 @@
 eclipse.preferences.version=1
-encoding//src/MAIN.java=UTF-8
 encoding//src/ModelLoading.java=UTF-8
-encoding//src/win2.java=UTF-8
-encoding//src/win3.java=UTF-8
+encoding//src/UI.java=UTF-8
+encoding//src/window2.java=UTF-8
+encoding//src/window3.java=UTF-8
