--- a/SSFMP/.classpath
+++ b/SSFMP/.classpath
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry excluding="src/" kind="src" path="src"/>
-	<classpathentry kind="src" path="src/src"/>
 	<classpathentry kind="lib" path="ex_jar/commons-lang-2.6.jar"/>
 	<classpathentry kind="lib" path="ex_jar/commons-logging-1.1.3.jar"/>
 	<classpathentry kind="lib" path="ex_jar/hsqldb.jar"/>
@@ -15,5 +18,6 @@
 	<classpathentry kind="lib" path="ex_jar/pmml-evaluator-extension-1.4-SNAPSHOT-sources.jar"/>
 	<classpathentry kind="lib" path="ex_jar/pmml-evaluator-extension-1.4-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="ex_jar/ucanaccess-4.0.4.jar"/>
+	<classpathentry kind="src" path="src/src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
